# seeso_sample

./: .gitignore  CMakeLists.txt  main.cpp  tracker_manager.cc  tracker_manager.h  view.cc
eyedid/: CMakeLists.txt  README.txt
eyedid/include/: CPPLINT.cfg
eyedid/include/eyedid/: gaze_tracker.cc  gaze_tracker.h
eyedid/include/eyedid/callback/: icalibration_callback.h  itracking_callback.h
eyedid/include/eyedid/framework/: c_api.h  c_def.h  callback_dispatcher.h  core_callback.cc  core_callback.h  dll_function.h  global_init.h
eyedid/include/eyedid/util/: coord_converter_v2.h  display.h  display_cocoa.mm  display_w32.cc  matrix.h  point.h
opencv/: CMakeLists.txt
